--- a/Enforced_system/package.json
+++ b/Enforced_system/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
