--- a/Enforced_system/package.json
+++ b/Enforced_system/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2"
   }
